--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,9 @@ text-align: center;
 BODY{
     background-color: rgb(3, 4, 2);
 }
+.name{
+    font-size: xx-large;
+}
     </style>
 </head>
 <body>
@@ -51,9 +54,10 @@ BODY{
             <th class="list"><a href="#">CONTACT</a></th>
         </tr>
     </table>
+    <nav class="name">
     <h1 class="HEAD">Abdul Rehman</h1>
     <H1 class="HEAD">CCO-000-111-111</H1>
     <h1 class="HEAD">JTM-FAQ</h1>
-    
+</nav>
 </body>
 </html>
