--- a/grocery.html
+++ b/grocery.html
@@ -17,6 +17,10 @@
     font-style: italic;
     text-shadow: 2px 5px 2px rgb(8, 8, 122);
 }
+.sec{
+font-size: x-large;
+
+}
 .nav{
     width: 100%;
     margin-top: -28px;
@@ -62,7 +66,7 @@ a{
     
 }
 body{
-    background: url(img/burger.jpg);
+    background: url(img/grocery.jpg);
 background-repeat: no-repeat;
 background-size: 100% 100%;
 }
