--- a/grocery.html
+++ b/grocery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu Assignment</title>
     <style>
 .top{
     background-color: rgb(140, 207, 77);
@@ -62,7 +62,7 @@ a{
 }
 .long
 {
-    font-size: 120%;
+    font-size: xx-large;
     
 }
 body{
