--- a/fruits.html
+++ b/fruits.html
@@ -42,7 +42,7 @@ a{
         .sec{
             height: 60px;
             background-color: rgb(7, 125, 125);
-            font-size: 250%;
+            font-size: xxx-large;
         }
 .deal{
 
